...
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                android:hint="Password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Sign Up Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="16dp"
                android:text="Sign Up"
                app:cornerRadius="12dp"
                android:textSize="16sp"/>
...
